# GeoScout

./: .env.example  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  REPRODUCE.md  pyproject.toml  requirements.txt
ShapeNBV/: .env.example  CITATION.cff  Makefile  README.md  REPRODUCE.md  eval_best_ckpt_numeric_full_summary_0507.json  pyproject.toml
ShapeNBV/eval_3way_judged_0509_download/: episodes.csv  full_eval_atlas.html  summary.json  summary.txt
ShapeNBV/eval_3way_nocap_0509_download/: episodes.csv  full_eval_atlas.html  summary.json  summary.txt
ShapeNBV/eval_3way_orig_0509_download/: episodes.csv  full_eval_atlas.html  summary.json  summary.txt
ShapeNBV/eval_best_ckpt_numeric_full_continuous_s1_0507/: summaries.json  summary.txt
ShapeNBV/eval_best_ckpt_numeric_full_discrete_s1_0507/: summaries.json  summary.txt
ShapeNBV/eval_best_ckpt_numeric_sanity_continuous_s1_0507/: summaries.json  summary.txt
ShapeNBV/eval_best_ckpt_numeric_sanity_discrete_s1_0507/: summaries.json  summary.txt
ShapeNBV/scripts/: analyze_eval_failures.py  apply_manual_caption_overrides.py  attach_object_caption_embeddings.py  evaluate_baselines.py  evaluate_visual_rollouts.py  export_fql_replay.py  judge_caption_contacts.py  make_caption_attr_review.py  make_caption_text_audit.py  make_test_mesh.py  modal_app.py  modal_smoke_app.py  precompute_category_embeddings.py  precompute_object_caption_embeddings.py  preprocess.py  smoke_validate_8ckpt_visual.py  train.py  validate.py  verify_preproc_caption_embeddings.py
ShapeNBV/shapenbv/: __init__.py  abo.py  env.py  viz.py  (+7 more)
(+101 files in other folders)
